# qlever

./: .codespellrc  .gitignore  CMakeLists.txt  CacheRaceConditionAnalysis.md  Dockerfile  Dockerfile.vector  WINDOWS.md  shell.nix
.github/workflows/: windows.yml
conanprofiles/: conanfile-windows-deps.txt  gcc-13-windows
docs/: qlever-walkthrough.md
docs/vector-index/: README.md  architecture.md  embedding-generation.md  implementation-log.md  index-payload-design.md  indexing.md  integration-plan.md  magic-service-extensibility.md  usage-and-comparison.md
docs/vector-index/poc/: run.sh  vec_poc.cpp
e2e/: e2e.sh
e2e/vector-search/: .env  .gitignore  README.md  clean.sh  docker-compose.yml  query.py  query_text.py  run-text.sh  run.sh
e2e/vector-search/data/: diagnose_siglip.py  precompute.py  probe.py  siglip_image_template.jinja
src/: PrintIndexVersionMain.cpp  ServerMain.cpp  VocabularyMergerMain.cpp
src/engine/: Bind.cpp  Bind.h  BuiltinMagicServicePlanners.cpp  BuiltinMagicServicePlanners.h  CMakeLists.txt  CheckUsePatternTrick.cpp  Engine.h  ExternalValues.cpp  Join.cpp  MagicPredicateRegistry.cpp  MagicPredicateRegistry.h  MagicServicePlanning.cpp  MagicServicePlanning.h  QueryPlanner.cpp  QueryPlanner.h  Service.cpp  Sort.h  SpatialJoin.h  SpatialJoinCachedIndex.cpp
src/engine/idTable/: CompressedExternalIdTable.h
src/engine/sparqlExpressions/: SparqlExpressionTypes.h
src/extensions/exampleOperation/: CMakeLists.txt  ExampleOperation.cpp  ExampleOperation.h
src/global/: Constants.h
src/index/: CMakeLists.txt  CompressedRelation.cpp  CompressedRelation.h  ConstantsIndexBuilding.h  DeltaTriples.cpp  DeltaTriples.h  GraphNameManager.cpp  IndexBuilderMain.cpp  IndexExtension.cpp  IndexExtension.h  IndexImpl.cpp  IndexImpl.h  IndexRebuilder.cpp  StringSortComparator.h  VocabularyMerger.h
src/index/vocabulary/: VocabularyInMemoryBinSearch.cpp  VocabularyOnDisk.cpp
src/libqlever/: Qlever.cpp  Qlever.h
src/parser/: AsyncBlockSource.cpp  AsyncFileBlockDriver.cpp  AsyncFileBlockDriver.h  BuiltinMagicServiceParsers.cpp  BuiltinMagicServiceParsers.h  CMakeLists.txt  GraphPatternAnalysis.h  GraphPatternOperation.h  MagicServiceIriConstants.h  MagicServiceRegistry.cpp  MagicServiceRegistry.h  ParallelBuffer.cpp  RdfParser.cpp  RdfParser.h  SparqlFunctionRegistry.cpp  SparqlFunctionRegistry.h  Tokenizer.h  VariableCounter.cpp  VariableCounter.h
src/parser/sparqlParser/: SparqlQleverVisitor.cpp  SparqlQleverVisitor.h
src/services/: CMakeLists.txt
src/services/vectorSearch/: CMakeLists.txt  EmbeddingClient.cpp  EmbeddingClient.h  UsearchGraph.h  VectorBf16Kernels.cpp  VectorBf16Kernels.h  VectorDistanceExpression.cpp  VectorDistanceExpression.h  VectorEmbedExpression.cpp  VectorEmbedExpression.h  VectorI8Kernels.cpp  VectorI8Kernels.h  VectorIndex.cpp  VectorIndex.h  VectorIndexBuilder.cpp  VectorIndexBuilder.h  VectorIndexExtension.cpp  VectorIndexExtension.h  VectorIndexFormat.h  VectorInputReader.cpp  VectorInputReader.h  VectorMemberScan.cpp  VectorMemberScan.h  VectorMemory.h  VectorQueryPoint.cpp  VectorQueryPoint.h  VectorSearch.cpp  VectorSearch.h  VectorSearchAmong.cpp  VectorSearchAmong.h  VectorSearchConfig.h  VectorSearchJoin.cpp  VectorSearchJoin.h  VectorSearchQuery.cpp  VectorSearchQuery.h  VectorSearchService.cpp  VectorSelect.h  VectorSweepExecutor.cpp  VectorSweepExecutor.h  VectorVectorExpression.cpp  (+1 more)
src/util/: CMakeLists.txt  CancellationHandle.cpp  ConcurrentCache.h  DefaultSharedMutex.h  File.h  FileMapping.h  JemallocLibraryHooks.cpp  JemallocLibraryHooks.h  MmapVector.h  MmapVectorImpl.h  PortableFileOpen.h  PortableTimedWait.h  PositionedReader.h  PosixFileMapping.h  PosixPositionedReader.h  Synchronized.h
src/util/JoinAlgorithms/: JoinAlgorithms.h
src/util/Serializer/: FileSerializer.h  TripleSerializer.h
src/util/http/: CMakeLists.txt  HttpClient.cpp
src/util/sys/: AccessPattern.h  DefaultSharedMutex.h  FileMapping.h  PortableFileOpen.h  PortableTimedWait.h  PositionedReader.h  PosixFileMapping.h  PosixPositionedReader.h
src/util/sys/windows/: CMakeLists.txt  FileCompat.h  LongPathAware.manifest  LongPathAware.rc  ProcessInit.cpp  ThreadAgnosticSharedMutex.h  WindowsFileMapping.h  WindowsPositionedReader.h  WindowsUndefs.h
src/util/windows/: FileCompat.h  LongPathAware.rc  ProcessInit.cpp  ThreadAgnosticSharedMutex.h  WindowsFileMapping.h  WindowsPositionedReader.h  WindowsUndefs.h
test/: CMakeLists.txt  CompressedRelationsTest.cpp  ConcurrentCacheTest.cpp  DeltaTriplesTest.cpp  ExceptionHandlingTest.cpp  FileTest.cpp  GeometryInfoTest.cpp  GroupByTest.cpp  HttpTest.cpp  MmapVectorTest.cpp  OperationTest.cpp  ProgressBarTest.cpp  RdfParserTest.cpp  ResultTest.cpp  SerializerTest.cpp  ServerTest.cpp  ServiceTest.cpp  SparqlExpressionTest.cpp  ThreadAgnosticSharedMutexTest.cpp  TimerTest.cpp  TokenTest.cpp  TripleSerializerTest.cpp  VectorCslsTest.cpp  VectorI8ScanTest.cpp  VectorIndexEndpointOverrideTest.cpp  VectorIndexPayloadE2ETest.cpp  VectorIndexTest.cpp  VectorPerfTest.cpp  VectorRerankTest.cpp  VectorSearchServiceTest.cpp  VectorSearchSimdInfoTest.cpp  VectorSweepExecutorTest.cpp
test/extensions/exampleOperation/: CMakeLists.txt  ExampleOperationTest.cpp
test/index/: GraphNameManagerTest.cpp
windows/patches/: ApplyPatch.cmake  README.md  antlr-windows.patch  fsst-windows.patch  spatialjoin-util-windows.patch  spatialjoin-windows.patch
